# awui

./: .clang-format  .hgignore  CMakeLists.txt  Readme.md  Readme.txt  TODO.txt  bbd.bat  bbd32.bat  bbr.bat  bbr32.bat  build  build.py  buildvars.bat  buildvars32.bat  clean.bat  clean.sh  clean32.bat  cleanDebug.sh  cleanRelease.sh  code.bat  codeblocks.sh  countLines.sh  gameOfBlocks.bat  generate.sh  stationTV.bat
libawui/: CMakeLists.txt  sonar-update.sh
libawui/awui/: Byte.cpp  Byte.h  ChronoLap.cpp  ChronoLap.h  Configuration.cpp  Configuration.h  Console.cpp  Console.h  Convert.cpp  Convert.h  DateTime.cpp  DateTime.h  Environment.cpp  Environment.h  Float.cpp  Float.h  Int32.cpp  Int32.h  Math.cpp  Math.h  Object.cpp  Object.h  Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  String.cpp  String.h  TimeSpan.cpp  TimeSpan.h  awuiApplication.cpp  awuiApplication.h  awuiArrayList.cpp  awuiArrayList.h  awuiBitmap.cpp  awuiBitmap.h  awuiButton.cpp  awuiButton.h  awuiColor.cpp  awuiColor.h  (+38 more)
libawui/awui/Collections/: ArrayList.cpp  ArrayList.h  SortedList.cpp  SortedList.h  Stack.cpp  Stack.h
libawui/awui/Core/: Color.cpp  Color.h  ColorF.cpp  ColorF.h
libawui/awui/Diagnostics/: Process.cpp  Process.h
libawui/awui/Drawing/: Color.cpp  Color.h  ColorF.cpp  ColorF.h  Font.cpp  Font.h  GlyphMetrics.cpp  GlyphMetrics.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Pen.cpp  Pen.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Shader.cpp  Shader.h  Size.cpp  Size.h
libawui/awui/Drawing/Drawing2D/: LineCap.h  LineJoin.h
libawui/awui/Effects/: Effect.cpp  Effect.h
libawui/awui/Emulation/Chip8/: CPU.cpp  CPU.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Memory.cpp  Memory.h  Opcode.cpp  Opcode.h  Processor.cpp  Processor.h  Registers.cpp  Registers.h  Screen.cpp  Screen.h  Sound.cpp  Sound.h  Stack.cpp  Stack.h  Timers.cpp
libawui/awui/Emulation/Common/: Ram.cpp  Ram.h  Rom.cpp  Rom.h  Word.h
libawui/awui/Emulation/MasterSystem/: CPU.cpp  CPU.h  CPUInst.cpp  CPUInst.h  Motherboard.cpp  Motherboard.h  Opcode.cpp  Opcode.h  Ports.cpp  Ports.h  Ram.cpp  Ram.h  Registers.cpp  Registers.h  Rom.cpp  Rom.h  Sound.cpp  Sound.h  SoundSDL.cpp  SoundSDL.h  VDP.cpp  VDP.h  readme.txt
libawui/awui/Emulation/Processors/Z80/: CPU.cpp  CPU.h  CPUInst.cpp  CPUInst.h  Opcode.cpp  Opcode.h  Registers.cpp  Registers.h
libawui/awui/Emulation/Spectrum/: CPU.cpp  CPU.h  CPUInst.cpp  CPUInst.h  Mainboard.cpp  Mainboard.h  Motherboard.cpp  Motherboard.h  Opcode.cpp  Opcode.h  Ports.cpp  Ports.h  Registers.cpp  Registers.h  Rom.cpp  Rom.h  Sound.cpp  Sound.h  SoundSDL.cpp  SoundSDL.h  TapeCorder.cpp  TapeCorder.h  ULA.cpp  ULA.h  VDP.cpp  VDP.h
libawui/awui/GOB/Engine/Cameras/: Camera.cpp  Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
libawui/awui/GOB/Engine/Core/: BufferGeometry.h  Object3D.cpp  Object3D.h  Triangle.h  TriangleIndices.h  TriangleVertices.h
libawui/awui/GOB/Engine/Materials/: Material.cpp  (+3 more)
libawui/awui/IO/: BinaryReader.cpp  BinaryReader.h  Directory.cpp  Directory.h  File.cpp  File.h  FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  Path.cpp  Path.h  Stream.cpp  Stream.h  TextWriter.cpp  TextWriter.h
libawui/awui/OpenGL/: GL.cpp  GL.h
libawui/awui/Scripting/: JavaScript.cpp  JavaScript.h
libawui/awui/Scripting/JavaScript/: JavaScript.cpp  JavaScript.h
libawui/awui/Windows/Emulators/: ArcadeContainer.cpp  ArcadeContainer.h  Chip8.cpp  Chip8.h  DebuggerSMS.cpp  DebuggerSMS.h  MasterSystem.cpp  MasterSystem.h  Spectrum.cpp  Spectrum.h
libawui/awui/Windows/Forms/: Application.cpp  Application.h  Bitmap.cpp  Bitmap.h  Button.cpp  Button.h  Control.cpp  Control.h  ControlCollection.cpp  ControlCollection.h  EventArgs.cpp  EventArgs.h  Form.cpp  Form.h  Gradient.cpp  Gradient.h  ImageFader.cpp  ImageFader.h  JoystickAxisMotionEventArgs.cpp  JoystickAxisMotionEventArgs.h  JoystickButtonEventArgs.cpp  JoystickButtonEventArgs.h  JoystickButtons.h  JoystickDpadEventArgs.cpp  JoystickDpadEventArgs.h  JoystickEventArgs.cpp  JoystickEventArgs.h  Keyboard.cpp  Keyboard.h  Keys.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  MouseButtons.h  MouseEventArgs.cpp  MouseEventArgs.h  Panel.cpp  Panel.h  RemoteButtons.h  (+8 more)
libawui/awui/Windows/Station/: SearchFiles.cpp  SearchFiles.h
libawui/awui/animation/: effects.cpp  effects.h
libawui/blargg/: Blip_Buffer.cpp  Blip_Buffer.h  Blip_Synth.h  Sms_Apu.cpp  Sms_Apu.h  Sms_Oscs.h  Sound_Writer.cpp  Sound_Writer.hpp  Stereo_Buffer.cpp  Stereo_Buffer.h  blargg_common.h
samples/: CMakeLists.txt  clean.sh  cleanDebug.sh  cleanRelease.sh  generate.sh
samples/awArcade/: CMakeLists.txt  awArcade.cpp  awSpectrum.cpp  form1.cpp  form1.h  formArcade.cpp  formArcade.h  test2.cpp  testChip8.sh  valgrind.sh  zex-num-opcodes.txt
samples/awChip8/: CMakeLists.txt  awChip8.cpp  form1.cpp  form1.h  roms  testAll.sh
samples/awMasterGear/: CMakeLists.txt  Retrocopy.txt  awMasterGear.cpp  count.sh  form1.cpp  form1.h  formMasterGear.cpp  formMasterGear.h  roms  test.sh  tests  valgrind.sh  zex-num-opcodes.txt  zex-v15-opcodes.txt
samples/awSlider/: CMakeLists.txt  awSlider.cpp  formSlider.cpp  formSlider.h  testWidget.cpp  testWidget.h  valgrind.sh
samples/awSpectrum/: CMakeLists.txt  awSpectrum.cpp  formSpectrum.cpp  formSpectrum.h  keyboard.odt  valgrind.sh  zex-v15-opcodes.txt
samples/awTIS100/: CMakeLists.txt  awTIS100.cpp  formTIS100.cpp  formTIS100.h
samples/awTest/: CMakeLists.txt  awArcade.cpp  awTest.cpp  configArduino.sh  formArcade.h  formTest.cpp  formTest.h  test2.cpp  test2.h
samples/awuiDemo/: CMakeLists.txt  awuiDemo.cpp  form1.cpp  form1.h  libawui  test1.cpp  test1.h
samples/gameOfBlocks/: CMakeLists.txt  formGOB.cpp  formGOB.h  main.cpp
samples/stationTV/: CMakeLists.txt  copy-installer.bat  formArcade.cpp  formArcade.h  keyboard.txt  main.cpp  menu-settings.json  shader.glfs  stationTV.cpp  valgrind.sh
samples/stationTV/roms/chip8/: Latest Updates.txt
samples/test/: form1.cpp  form1.h
test/: CMakeLists.txt  awuiDemo.cpp  form1.cpp  form1.h  test1.cpp  test1.h  test2.cpp  test2.h
(+160 files in other folders)
