CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE(OpenGL REQUIRED)
if(NOT OPENGL_FOUND)
	message("ERROR: OpenGL not found")
endif(NOT OPENGL_FOUND)

MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")

FIND_PACKAGE(Freetype REQUIRED)
if(NOT FREETYPE_FOUND)
	message("ERROR: FreeType not found")
endif(NOT FREETYPE_FOUND)

MESSAGE(STATUS "FreeType: ${FREETYPE_LIBRARIES}")


ADD_SUBDIRECTORY( libaw )
ADD_SUBDIRECTORY( libawui )
ADD_SUBDIRECTORY( test )
