CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE(OpenGL REQUIRED)
if(NOT OPENGL_FOUND)
	message("ERROR: OpenGL not found")
endif(NOT OPENGL_FOUND)
MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")

FIND_PACKAGE(SDL REQUIRED)
if(NOT SDL_FOUND)
	message("ERROR: SDL not found")
endif(NOT SDL_FOUND)
MESSAGE(STATUS "SDL: ${SDL_LIBRARY}")

FIND_PACKAGE(SDL_image REQUIRED)
if(NOT SDLIMAGE_FOUND)
	message("ERROR: SDL_image not found")
endif(NOT SDLIMAGE_FOUND)
MESSAGE(STATUS "SDL_image: ${SDLIMAGE_LIBRARY}")

ADD_SUBDIRECTORY( libawui )
ADD_SUBDIRECTORY( test )
