CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(libawui)

INCLUDE(FindPkgConfig)

MESSAGE(STATUS "PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

FIND_PACKAGE(GLEW REQUIRED)
IF (NOT GLEW_FOUND)
	MESSAGE("ERROR: GLEW not found")
ENDIF ()

MESSAGE(STATUS "GLEW_INCLUDE_DIRS: ${GLEW_INCLUDE_DIRS}")
MESSAGE(STATUS "GLEW_LIBRARIES: ${GLEW_LIBRARIES}")

FIND_PACKAGE(OpenGL REQUIRED)
IF (NOT OPENGL_FOUND)
	MESSAGE("ERROR: OpenGL not found")
ENDIF ()
MESSAGE(STATUS "OPENGL_INCLUDE_DIR: ${OPENGL_INCLUDE_DIR}")
MESSAGE(STATUS "OPENGL_gl_LIBRARY: ${OPENGL_gl_LIBRARY}")

FIND_PACKAGE(SDL2 REQUIRED)
MESSAGE(STATUS "SDL2_LIBRARIES: ${SDL2_LIBRARIES}")
MESSAGE(STATUS "SDL2_INCLUDE_DIRS: ${SDL2_INCLUDE_DIRS}")

set(SDL2_image_DIR "cmake")

FIND_PACKAGE(SDL2_image REQUIRED)

INCLUDE_DIRECTORIES(
	/usr/include/cairo/
	C:/msys64/mingw64/include/cairo/
	C:/msys64/mingw64/x86_64-w64-mingw32/include/
	.
	${OPENGL_INCLUDE_DIR}
	${GLEW_INCLUDE_DIRS}
	${SDL2_INCLUDE_DIRS}
)

FILE(GLOB_RECURSE LIBAWUI_SOURCES awui/*.cpp )
FILE(GLOB_RECURSE LIBAWUI_HEADERS awui/*.h )

SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})

ADD_LIBRARY(awui SHARED ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
#ADD_LIBRARY(awui_static STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})

TARGET_LINK_LIBRARIES(
	awui
	cairo
	${OPENGL_gl_LIBRARY}
	GLEW::GLEW
	SDL2::SDL2
	SDL2_image::SDL2_image
)
