CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(libawui)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_CHECK_MODULES(CAIRO REQUIRED cairo)

# OpenGL configuration
IF (NOT OPENGL_FOUND)
  MESSAGE(FATAL_ERROR "OpenGL not found")
ENDIF ()

# GLEW configuration
IF (NOT GLEW_FOUND)
  MESSAGE(FATAL_ERROR "GLEW not found")
ENDIF ()

# SDL2 configuration
IF (NOT SDL2_FOUND)
  MESSAGE(FATAL_ERROR "SDL2 not found")
ENDIF ()

# SDL2_image configuration
IF (NOT SDL2IMAGE_FOUND)
  MESSAGE(FATAL_ERROR "SDL2_image not found")
ENDIF ()

# Cairo configuration
IF (NOT CAIRO_FOUND)
  MESSAGE(FATAL_ERROR "Cairo not found")
ENDIF ()

# Define los archivos de fuente y cabecera
FILE(GLOB_RECURSE LIBAWUI_SOURCES awui/*.cpp )
FILE(GLOB_RECURSE LIBAWUI_HEADERS awui/*.h )

# Organiza los archivos en grupos visuales para IDEs
SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})

# Define el target de la biblioteca
ADD_LIBRARY(awui SHARED ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})

# Especifica directorios de inclusión para el target
TARGET_INCLUDE_DIRECTORIES(awui PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CAIRO_INCLUDE_DIRS}
  ${GLEW_INCLUDE_DIRS}
  ${OPENGL_INCLUDE_DIR}
  ${SDL2_INCLUDE_DIRS}
  ${SDL2IMAGE_INCLUDE_DIRS}
)

# Vincula el target con las bibliotecas necesarias
TARGET_LINK_LIBRARIES(awui PUBLIC
  ${CAIRO_LIBRARIES}
  ${GLEW_LIBRARIES}
  ${OPENGL_gl_LIBRARY}
  ${SDL2_LIBRARIES}
  ${SDL2IMAGE_LIBRARIES}
)

# Agrega definiciones de compilación para el target
TARGET_COMPILE_DEFINITIONS(awui PRIVATE ${CAIRO_CFLAGS_OTHER})