CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

PROJECT(samples)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET(LIBAWUI_BIN_PATH "../../b/d/libawui")
ELSE()
	SET(LIBAWUI_BIN_PATH "../../b/r/libawui")
ENDIF()

ADD_SUBDIRECTORY(stationTV)
ADD_SUBDIRECTORY(awuiDemo)
ADD_SUBDIRECTORY(awSlider)
ADD_SUBDIRECTORY(awTest)

