CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")

PROJECT(awArcade)

if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()

INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWARCADE_SOURCES *.cpp)
FILE(GLOB AWARCADE_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWARCADE_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWARCADE_HEADERS})

ADD_EXECUTABLE(awArcade ${AWARCADE_SOURCES} ${AWARCADE_HEADERS})

TARGET_LINK_LIBRARIES(
	awArcade
	${LIBAWUI_LIBRARIES}
#	Imm32
)
