CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")

PROJECT(awChip8)

if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x -O3 -fomit-frame-pointer")
endif()
	
INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWCHIP8_SOURCES *.cpp)
FILE(GLOB AWCHIP8_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWCHIP8_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWCHIP8_HEADERS})

ADD_EXECUTABLE(awChip8 ${AWCHIP8_SOURCES} ${AWCHIP8_HEADERS})

TARGET_LINK_LIBRARIES(
	awChip8
	${LIBAWUI_LIBRARIES}
#	Imm32
)
