CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")

PROJECT(awMasterGear)

if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x -O3 -fomit-frame-pointer")
endif()

INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWMASTERGEAR_SOURCES *.cpp)
FILE(GLOB AWMASTERGEAR_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWMASTERGEAR_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWMASTERGEAR_HEADERS})

ADD_EXECUTABLE(awMasterGear ${AWMASTERGEAR_SOURCES} ${AWMASTERGEAR_HEADERS})

TARGET_LINK_LIBRARIES(
	awMasterGear
	${LIBAWUI_LIBRARIES}
#	Imm32
)
