PROJECT(awSlider)

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "${LIBAWUI_BIN_PATH}" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "../../libawui" DOC "awui includes")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
	
INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWSLIDER_SOURCES *.cpp)
FILE(GLOB AWSLIDER_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWSLIDER_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWSLIDER_HEADERS})

IF (WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
	ADD_EXECUTABLE(awSlider WIN32 ${AWSLIDER_SOURCES} ${AWSLIDER_HEADERS})
ELSE ()
	ADD_EXECUTABLE(awSlider ${AWSLIDER_SOURCES} ${AWSLIDER_HEADERS})
ENDIF ()

TARGET_LINK_LIBRARIES(
	awSlider
	${LIBAWUI_LIBRARIES}
)
