CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")

PROJECT(awSpectrum)

if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()

INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWSPECTRUM_SOURCES *.cpp)
FILE(GLOB AWSPECTRUM_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWSPECTRUM_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWSPECTRUM_HEADERS})

ADD_EXECUTABLE(awSpectrum ${AWSPECTRUM_SOURCES} ${AWSPECTRUM_HEADERS})

TARGET_LINK_LIBRARIES(
	awSpectrum
	${LIBAWUI_LIBRARIES}
#	Imm32
)
