PROJECT(awTIS100)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")

if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()

INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWTIS100_SOURCES *.cpp)
FILE(GLOB AWTIS100_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWTIS100_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWTIS100_HEADERS})

ADD_EXECUTABLE(awTIS100 ${AWTIS100_SOURCES} ${AWTIS100_HEADERS})

TARGET_LINK_LIBRARIES(
	awTIS100
	${LIBAWUI_LIBRARIES}
)
