PROJECT(awTest)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "${LIBAWUI_BIN_PATH}" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "../../libawui" DOC "awui includes")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
	
INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWTEST_SOURCES *.cpp)
FILE(GLOB AWTEST_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWTEST_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWTEST_HEADERS})

IF (WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
	ADD_EXECUTABLE(awTest WIN32 ${AWTEST_SOURCES} ${AWTEST_HEADERS})
ELSE ()
	ADD_EXECUTABLE(awTest ${AWTEST_SOURCES} ${AWTEST_HEADERS})
ENDIF ()

TARGET_LINK_LIBRARIES(
	awTest
	${LIBAWUI_LIBRARIES}
)
