CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")

PROJECT(awuiDemo)

if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
	
INCLUDE_DIRECTORIES(
	${LIBAWUI_INCLUDE_DIRS}
)

FILE(GLOB AWUIDEMO_SOURCES *.cpp)
FILE(GLOB AWUIDEMO_HEADERS *.h)

SOURCE_GROUP("Source" FILES ${AWUIDEMO_SOURCES})
SOURCE_GROUP("Headers" FILES ${AWUIDEMO_HEADERS})

ADD_EXECUTABLE(awuiDemo	${AWUIDEMO_SOURCES} ${AWUIDEMO_HEADERS})

TARGET_LINK_LIBRARIES(
	awuiDemo
	${OPENGL_LIBRARIES}
	${LIBAWUI_LIBRARIES}
#	Imm32
)
